--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,13 @@
+Original Author:
 Tarn Adams (www.bay12games.com)
 Kevin Sadler
 
-Current Maintainers:
+Retired Maintainers:
 Jonathan Stickles (jonathansfox@users.sourceforge.net)
 Chris Johnson (grundee@users.sourceforge.net)
-Jared Grommesh (https://github.com/King-Drake/)
+
+Current Maintainers:
+Jared Grommesh (IsaacG) (JJoseph) (https://github.com/King-Drake/)
 
 Full list of Contributors:
 (not just to the main project but also to ports, forks, mods, etc.)
@@ -32,7 +35,7 @@ Ighalli (2008) - direct contributor to main project
 infernozeus (2011) - contributed code thru forums
 Janus / brettflan (2010) - direct contributor to main project
 jcarter2014 (2014) - direct contributor to main project
-Jonathan Stickles / Jonathan S. Fox (2007-2014) - current maintainer of the game who revived the project and puts out official releases
+Jonathan Stickles / Jonathan S. Fox (2007-2014) - maintainer of the game who revived the project and put out official releases
 KA101 (2013) - contributed maps
 Kamal Sadek (2015) - Probably did something
 Kay12 (2011-2013) - contributed code and bug reports thru forums
@@ -71,3 +74,4 @@ bregma - contributed to GitHub fork
 IsaacG - current maintainer
 Schmel924 - contributed to GitHub fork
 SlatersQuest - made the Terra Vitae mod and contributed bug reports
+Taberone - made the Liberal Overhaul+Rebalance mod and contributed bug reports
