--- a/changelog.txt
+++ b/changelog.txt
@@ -1112,3 +1112,12 @@ Major refactoring of talk.cpp, replacing many functions with enums
 4.12.51
 Fixed minor error introduced in 4.12.50
 Fixed display error 070) Cars
+
+4.12.52
+Fixed amendment crash for stalinist/confederate amendment
+
+4.12.53
+Fixed minor typo in Status of Liberal Agenda
+Identified and fixed the Party Switch Error 057)
+The error was determined to be present in 4.10, thereby predating my involvement
+Fixed lack of encounters in Internet Cafe (and Juice Bar)
