--- a/changelog.txt
+++ b/changelog.txt
@@ -1125,3 +1125,6 @@ Fixed lack of encounters in Internet Cafe (and Juice Bar)
 4.12.54
 Fixed extra press key bug on Highscore Menu
 Updated bay12 forums link
+
+4.12.55
+Added support for RustKnight Portraits
