--- a/AUTHORS
+++ b/AUTHORS
@@ -78,3 +78,4 @@ noop3451 - contributed to GitHub fork
 Schmel924 - contributed to GitHub fork
 SlatersQuest - made the Terra Vitae mod and contributed bug reports
 Taberone - made the Liberal Overhaul+Rebalance mod and contributed bug reports
+Weeping-Cat - contributed to the GitHub fork
